# DocBinder-OSS

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  example_file.yaml  mkdocs.yml  pyproject.toml  requirements.txt  search_results.csv  setup.py  tox.ini
.github/workflows/: ci.yml  deploy-docs.yml  docbinder-oss.yml  pypi-publish.yml
docs/: CONTRIBUTING.md
docs/tool/providers/: custom_provider.md  google_drive.md
src/docbinder_oss/: __init__.py  main.py  provider.py  schemas.py
src/docbinder_oss/cli/: search.py  setup.py
src/docbinder_oss/cli/provider/: get.py  test.py
src/docbinder_oss/commands/: search.py  setup.py
src/docbinder_oss/commands/provider/: __init__.py  get.py  list.py  test.py
src/docbinder_oss/core/: config.py  schemas.py
src/docbinder_oss/helpers/: config.py  path_utils.py  rich_helpers.py  writer.py
src/docbinder_oss/helpers/writers/: multiformat_writer.py  writer_console.py  writer_csv.py  writer_json.py
src/docbinder_oss/providers/google_drive/: google_drive_client.py  google_drive_files.py  google_drive_service_config.py
src/docbinder_oss/services/: __init__.py  base_class.py  base_client.py  google_drive_client.py
src/docbinder_oss/services/dropbox/: __init__.py  dropbox_client.py  dropbox_provider_config.py  dropbox_service_config.py
src/docbinder_oss/services/google-drive/: __init__.py  google_drive_buckets.py  google_drive_client.py  google_drive_objects.py  google_drive_permissions.py
src/docbinder_oss/services/google_drive/: __init__.py  google_drive_buckets.py  google_drive_client.py  google_drive_files.py  google_drive_objects.py  google_drive_permissions.py  google_drive_service_config.py  google_provider_config.py
src/docbinder_oss/services/onedrive/: __init__.py  onedrive_client.py  onedrive_service_config.py
tests/: conftest.py
tests/commands/: test_search_command.py
tests/helpers/: test_writer.py
tests/providers/google_drive/: conftest.py  test_google_drive_buckets.py  test_google_drive_files.py  test_google_drive_permissions.py
tests/services/: test_search_export.py
tests/services/google_drive/: conftest.py  test_google_drive_buckets.py  test_google_drive_files.py  test_google_drive_permissions.py
