[project]
name = "docbinder_oss"
version = "0.1.2"
description = "DocBinder Open Source Shared Library"
readme = "README.md"
authors = [
    { name = "Paolo Leonard", email = "paolo@snappylab.dev" },
    { name = "Christophe Beke", email = "christophe@snappylab.dev" }
]
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.171.0",
    "google-auth-oauthlib>=1.2.2",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "typer>=0.16.0",
]

[project.scripts]
docbinder = "docbinder_oss.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docbinder_oss"]
include = ["src/docbinder_oss/**"]
