[project]
name = "docbinder_oss"
version = "0.1.2"
description = "DocBinder Open Source Shared Library"
readme = "README.md"
authors = [
    { name = "Paolo Leonard", email = "paolo@snappylab.dev" },
    { name = "Christophe Beke", email = "christophe@snappylab.dev" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.5",
    "google-api-python-client>=2.171.0",
    "google-auth-oauthlib>=1.2.2",
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docbinder_oss"]
include = ["src/docbinder_oss/**"]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
    "pytest>=8.4.0",
    "tox-uv>=1.26.0",
]

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.13", "3.12", "3.11"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["pytest"]]

[tool.tox.env.type]
description = "run type check on code base"
deps = ["mypy==1.11.2", "types-cachetools>=5.5.0.20240820", "types-chardet>=5.0.4.6"]
commands = [["mypy", "src{/}tox"], ["mypy", "tests"]]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
