[project]
name = "docbinder_oss"
version = "0.1.2"
description = "DocBinder Open Source Shared Library"
readme = "README.md"
authors = [
    { name = "Paolo Leonard", email = "paolo@snappylab.dev" },
    { name = "Christophe Beke", email = "christophe@snappylab.dev" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.5",
    "google-api-python-client>=2.171.0",
    "google-auth-oauthlib>=1.2.2",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "typer>=0.16.0",
    "rich>=14.0.0",
]

[project.scripts]
docbinder = "docbinder_oss.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docbinder_oss"]
include = ["src/docbinder_oss/**"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "tox>=4.26.0",
    "tox-uv>=1.26.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
